# candidate-transformer

./: README.md  h origin main --force  pyproject.toml
candidate-transformer/: CLAUDE.md
candidate-transformer/docs/: architecture.md  decisions.md  roadmap.md
configs/: default.json
docs/: architecture.md  assignment.md  decisions.md
fixtures/github/: jonpark.json
outputs/: custom_example.json  default.json
sample_inputs/: README.md  ats.json  notes.txt  recruiter.csv
src/transformer/: __init__.py  cli.py  confidence.py  config.py  detect.py  merge.py  models.py  pipeline.py  scoring.py
src/transformer/adapters/: __init__.py  ats.py  csv.py  github.py  notes.py
src/transformer/data/: scoring.json
src/transformer/normalize/: __init__.py  country.py  date.py  email.py  name.py  phone.py  result.py  skill.py
src/transformer/normalize/data/: skills.json
src/transformer/project/: __init__.py  interpreter.py  normalize_hooks.py  path.py  validate.py
src/transformer/resolve/: __init__.py  blocking.py  candidate_id.py  cluster.py  match.py  namematch.py  records.py
tests/: conftest.py  test_confidence_p1.py  test_entity_resolution.py  test_gold_profiles.py  test_normalize_and_isolation.py  test_normalizers_p1.py  test_projection.py
