[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-source candidate data transformer"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3",
    "phonenumbers",
    "email-validator",
    "rapidfuzz",
    "pycountry",
    "python-dateutil",
    "metaphone",
    "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
transformer = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
